syntax = "proto3";

package api;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service JobServiceV2 {
  rpc GetJob(GetJobRequestV2) returns (JobDetailV2) {
    option (google.api.http) = {
      get: "/apis/v1alpha2/pipelines/{pipeline_id}/jobs/{job_id}"
    };
  }

  rpc ListJobs(ListJobsRequestV2) returns (ListJobsResponseV2) {
    option (google.api.http) = {
      get: "/apis/v1alpha2/pipelines/{pipeline_id}/jobs"
    };
  }
}

message GetJobRequestV2 {
  string pipeline_id = 1;
  string job_id = 2;
}

message ListJobsRequestV2 {
  string pipeline_id = 1;
  string page_token = 2;
  int32 page_size = 3;
  string sort_by = 4;
}

message ListJobsResponseV2 {
  repeated JobV2 jobs = 1;
  string next_page_token = 2;
}

message JobV2 {
  string id = 1;
  string name = 2;
  string namespace = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp scheduled_at = 5;
  string status = 6;
}

message JobDetailV2 {
  JobV2 job = 1;
  string workflow = 2;
}